fix: Little spacing details to improve UX

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,13 +1,11 @@
 .App {
     width: 100vw;
-    height: 100vh;
+    
+    box-sizing: padding-box;
 
     display: flex;
     flex-direction: column;
     justify-items: center;
-
-    overflow-y: auto;
-
-    background-color: var(--dark);
+        
     color: var(--light);
 }
