--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -11,7 +11,7 @@
 {
     .Game {
         flex-direction: column;
-        gap: 5vmin;
+        gap: 2vmin;
     }
 }
 
